# IssarVideos

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LEADERBOARD_FEATURE.md  PRODUCTION_DATABASE_PROTECTION.md  README.md  TESTING_SUMMARY.md  cleanup.sh  cloudbuild.yaml  deploy.sh  example_story_usage.py  get_story.py  main.py  pyproject.toml  pytest.ini  run_tests.py  service.yaml  setup_sheets.sh  test_api_demo.py  test_env_loading.py  test_mock_api.py  test_sheets_connection.py  test_temp_db.xlsx
clients/: openai_client.py  sheets_client.py
data/: video_info.py  video_record.py
db/: narratives_db.py  sheets_narratives_db.py
llm/: get_story.py  get_videos.py  narrative_explain.py  rank_videos.py
search/: README.md  __init__.py  youtube_search.py
static/: add-narrative-modal.css  add-narrative-modal.html  edit-prompt-popup.html  grid-test.css  narratives_db.xlsx  report.css  report.html  report.js  tagger.css  tagger.html  tagger.js  tagging-management.css  tagging-management.html  tagging-management.js
static/db/: narratives_db copy.xlsx  narratives_db.xlsx
tests/: README.md  conftest.py  run_all_tests.py  run_tests.py  test-local.sh  test_api.py  test_button_implementation.sh  test_db.py  test_runner.py
tests/debug/: debug_test.html  test_button.html
tests/html_tests/: button_test.html  debug_video_link.html  link_test.html
tests/integration/: test_api_endpoints.py  test_authentication.py  test_comprehensive_api.py  test_custom_prompt_api.py  test_google_sheets_integration.py  test_story_generation.py  (+2 more)
(+12 files in other folders)
